Clear away excess type definitions

--- a/src/pages/user/[id]/scheduling/index.astro
+++ b/src/pages/user/[id]/scheduling/index.astro
@@ -2,7 +2,7 @@
 import { db, eq, User, Car, CarClass, Season } from "astro:db";
 import DefaultLayout from "$lib/layouts/default.astro";
 import type {
-  CarClass as CarClassType,
+  CarClassType,
   SchedulingTableResult,
   Track,
 } from "$lib/types";
