--- a/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
+++ b/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
@@ -11,9 +11,8 @@ import {
 } from "astro:db";
 import SubsessionsLayout from "$lib/layouts/subsessions.astro";
 import userIds from "$lib/utils/user-ids";
-import type { UserIdCarClassIdsMapping } from "$lib/types";
 export async function getStaticPaths() {
-  const mappings: Array<UserIdCarClassIdsMapping> = await Promise.all(
+  const mappings = await Promise.all(
     userIds.map(async (userId) => {
       const values = await db
         .selectDistinct({ car_class_id: Standing.car_class_id })
@@ -26,7 +25,7 @@ export async function getStaticPaths() {
   return mappings
     .map((mapping) => {
       const { userId, carClassIds } = mapping;
-      return carClassIds.map((carClassId) => ({
+      return carClassIds.map((carClassId: number) => ({
         params: { id: userId, carClassId },
       }));
     })
