--- a/src/pages/subsession/[id].astro
+++ b/src/pages/subsession/[id].astro
@@ -63,13 +63,15 @@ const splitRaceResults = raceResults.find((result) =>
   : { heatResults: [], mainResults: [] };
 const session_results = [
   {
-    simsession_type_name: practiceResultOne.simsession_type_name || 'Open Practice',
-    simsession_name: practiceResultOne.simsession_name || 'PRACTICE',
+    simsession_type_name:
+      practiceResultOne.simsession_type_name || "Open Practice",
+    simsession_name: practiceResultOne.simsession_name || "PRACTICE",
     results: practiceResults,
   },
   {
-    simsession_type_name: qualifyingResultOne.simsession_type_name || 'Lone Qualifying',
-    simsession_name: qualifyingResultOne.simsession_name || 'QUALIFY',
+    simsession_type_name:
+      qualifyingResultOne.simsession_type_name || "Lone Qualifying",
+    simsession_name: qualifyingResultOne.simsession_name || "QUALIFY",
     results: qualifyingResults,
   },
 ];
@@ -81,16 +83,16 @@ if (heatResults.length && mainResults.length) {
     ...[
       {
         // @ts-ignore
-        simsession_type_name: heatResultOne.simsession_type_name || 'Race',
+        simsession_type_name: heatResultOne.simsession_type_name || "Race",
         // @ts-ignore
-        simsession_name: heatResultOne.simsession_name || 'HEAT',
+        simsession_name: heatResultOne.simsession_name || "HEAT",
         results: heatResults,
       },
       {
         // @ts-ignore
-        simsession_type_name: mainResultOne.simsession_type_name || 'Race',
+        simsession_type_name: mainResultOne.simsession_type_name || "Race",
         // @ts-ignore
-        simsession_name: mainResultOne.simsession_name || 'RACE',
+        simsession_name: mainResultOne.simsession_name || "RACE",
         results: mainResults,
       },
     ]
@@ -98,8 +100,8 @@ if (heatResults.length && mainResults.length) {
 } else {
   const [raceResultOne] = raceResults || [{}];
   session_results.push({
-    simsession_type_name: raceResultOne.simsession_type_name || 'Race',
-    simsession_name: raceResultOne.simsession_name || 'RACE',
+    simsession_type_name: raceResultOne.simsession_type_name || "Race",
+    simsession_name: raceResultOne.simsession_name || "RACE",
     results: raceResults,
   });
 }
