--- a/src/lib/layouts/subsessions.astro
+++ b/src/lib/layouts/subsessions.astro
@@ -66,7 +66,7 @@ const results = subsessions.map((subsession: Subsession) => {
     aggregate_champ_points,
   };
 });
-const keysToDisplay = new Set(Object.keys(results[0]));
+const keysToDisplay = new Set(Object.keys(results[0] || {}));
 const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 ---
 
