--- a/src/pages/user/[id]/index.astro
+++ b/src/pages/user/[id]/index.astro
@@ -22,6 +22,13 @@ const description = `User page for user ID: ${id}`;
       <a
         class="underline"
         rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/scheduling/by-week`>Scheduling By Week</a
+      >
+    </div>
+    <div>
+      <a
+        class="underline"
+        rel="prefetch"
         href=`/Stat-N-Track/user/${id}/subsessions`>All Sessions</a
       >
     </div>
@@ -38,6 +45,14 @@ const description = `User page for user ID: ${id}`;
         rel="prefetch"
         href=`/Stat-N-Track/user/${id}/subsessions/by-car-class`
         >Sessions By Car Class</a
+      >
+    </div>
+    <div>
+      <a
+        class="underline"
+        rel="prefetch"
+        href=`/Stat-N-Track/user/${id}/subsessions/by-track`
+        >Sessions By Track</a
       >
     </div>
     <div>
