Various styling and data adjustments for Subsession pages

--- a/src/lib/components/subsession/licenseInfo.astro
+++ b/src/lib/components/subsession/licenseInfo.astro
@@ -5,9 +5,10 @@ const [allowedLicenseOne, allowLicenseTwo] = licenses || [];
 const allowedLicenses = [allowedLicenseOne, allowLicenseTwo];
 ---
 
-<div class="row-span-1">
-  <p class="text-center">License Category: {licenseCategory}</p>
-  <div class="text-center">
+<div class="text-center border-b-2">
+  <p>License Information:</p>
+  <p>License Category: {licenseCategory}</p>
+  <div>
     Allowed Licenses:
     {
       allowedLicenses.map((license: License, index: number) => (
