--- a/src/lib/components/subsession/relevantIds.astro
+++ b/src/lib/components/subsession/relevantIds.astro
@@ -35,7 +35,7 @@ const otherRelevantIdsList = Object.keys(relevantIdMap)
 ---
 
 <div class="text-center row-span-1">
-  Relevant IDs
+  <p>Relevant IDs:</p>
   {relevantIds.map((id) => <p>{id}</p>)}
   {otherRelevantIdsList.map((value) => <p>{value}</p>)}
 </div>
