--- a/src/lib/components/track/info.astro
+++ b/src/lib/components/track/info.astro
@@ -3,8 +3,8 @@ const { cornersPerLap, track } = Astro.props;
 const { track_name, config_name, category } = track;
 ---
 
-<div class="text-center row-span-1">
-  Track Facts:
+<div class="text-center border-b-2">
+  <p>Track Facts:</p>
   <p>Name: {track_name}</p>
   <p>Configuration: {config_name}</p>
   <p>Category: {category}</p>
