Remove rel="prefetch" from all <a> tags

--- a/src/lib/layouts/default.astro
+++ b/src/lib/layouts/default.astro
@@ -25,21 +25,15 @@ const seoDescription =
       <div
         class="block lg:text-3xl md:text-lg sm:text-md break-words text-center py-2"
       >
-        <a class="underline" href="/Stat-N-Track/" rel="prefetch">Home</a>
-        <a
-          class="underline pl-2"
-          href="/Stat-N-Track/user/300752/"
-          rel="prefetch">Jacob Collins</a
+        <a class="underline" href="/Stat-N-Track/">Home</a>
+        <a class="underline pl-2" href="/Stat-N-Track/user/300752/"
+          >Jacob Collins</a
         >
-        <a
-          class="underline pl-2"
-          href="/Stat-N-Track/user/815162/"
-          rel="prefetch">Jack Glenzinski</a
+        <a class="underline pl-2" href="/Stat-N-Track/user/815162/"
+          >Jack Glenzinski</a
         >
-        <a
-          class="underline pl-2"
-          href="/Stat-N-Track/shared-subsessions/"
-          rel="prefetch">Shared Subsessions</a
+        <a class="underline pl-2" href="/Stat-N-Track/shared-subsessions/"
+          >Shared Subsessions</a
         >
       </div>
     </div>
