--- a/src/pages/user/[id]/subsessions/by-year/index.astro
+++ b/src/pages/user/[id]/subsessions/by-year/index.astro
@@ -29,6 +29,6 @@ import {
 
 <DefaultLayout {title} {description}>
 	<div class="text-center text-3xl">
-    {years.map((year) => (<div><a class="underline" href=`/Stat-N-Track/user/${id}/subsessions/by-year/${year.season_year}` rel="prefetch">{year.season_year}</a></div>))}
+    {years.map((year) => (<div><a class="underline" href=`/Stat-N-Track/user/${id}/subsessions/by-year/${year.season_year}` >{year.season_year}</a></div>))}
 	</div>
 </DefaultLayout>
