Add loading="eager" to series logos

--- a/src/lib/components/subsession/header.astro
+++ b/src/lib/components/subsession/header.astro
@@ -13,6 +13,7 @@ const { series_logo, season_name, race_week_num, max_weeks } = subsession;
         width={300}
         height={100}
         format="avif"
+        loading="eager"
       />
     </div>
     <div class="text-center py-4">
