--- a/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
+++ b/src/pages/user/[id]/season/[seasonId]/car-class/[carClassId]/season-summary.astro
@@ -41,7 +41,7 @@ const allSeasonRaceResultsForUser = await db
     and(
       eq(SubsessionRaceResults.cust_id, Number(id)),
       eq(SubsessionRaceResults.car_class_id, Number(carClassId)),
-      sql`${SubsessionRaceResults.simsession_name} IN ${["RACE", "FEATURE"]}`
+      sql`${SubsessionRaceResults.simsession_name} IN ${["RACE", "FEATURE", "N/A"]}`
     )
   );
 const subsessions = allSeasonSubsessions.filter((v) =>
