--- a/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
+++ b/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
@@ -42,7 +42,7 @@ const subsessionRaceResults = await db
     and(
       eq(SubsessionRaceResults.cust_id, Number(id)),
       eq(SubsessionRaceResults.car_class_id, Number(carClassId)),
-      sql`${SubsessionRaceResults.simsession_name} IN ${["RACE", "FEATURE"]}`
+      sql`${SubsessionRaceResults.simsession_name} IN ${["RACE", "FEATURE", "N/A"]}`
     )
   );
 const subsessionsWithoutResult = await db
